refactor user and book models and dao